Villas - player commands